# GnuSocialShell

./: BUILDING.md  HACKING.md  Main.c  Makefile  Makefile.am  README.md  autogen.sh  config  configure.ac  gnusocialshell.c  gnusocialshell.h  help.c  help.h  loadConfig.c  loadConfig.h
lib/: answer_status_by_id.c  answer_status_by_id.c~  constants.h  delete_status_by_id.c  delete_status_by_id.c~  favorite.c  follow_user.c  get_account_info.c  get_account_info.c~  get_group_info.c  get_user_info_by_id.c  get_user_info_by_id.c~  gnusocial.c  gnusocial.h  gnusocial.h~  join_group.c  leave_group.c  list_groups.c  print_users_array_info.c  print_users_array_info.c~  read_timeline.c  read_timeline.c~  retweet_by_id.c  retweet_by_id.c~  search_by_id.c  search_by_id.c~  send_status.c  send_status.c~  send_to_api.c  unfollow_user.c  upload_files.c~  verify_account.c  verify_account.c~
